--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<html  class="page">
+<html  class="page" lang="de">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="mobile-web-app-capable" content="yes">
       <meta name="apple-mobile-web-app-capable" content="yes">
-      <meta name="apple-mobile-web-app-title" content="Impressum">
+      <meta name="apple-mobile-web-app-title" content="OFM">
       <meta name="msapplication-TileColor" content="#ffffff">
       <meta name="msapplication-TileImage" content="images/logo.png">
       <link rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link rel="profile" href="http://gmpg.org/xfn/11">
-      <title>Impressum</title>
+      <title>OFM</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -61,9 +61,15 @@
             </div>
          </nav>
       </div>
-      <main class="flex-shrink-0 flex-grow-1">
-         <div class="container">
-            <h1>Impressum</h1>
+      <main class="flex-grow-1 flex-shrink-1 bg">
+         <div class="row pad"></div>
+         <div class="row title">
+            <div class="col-md-2 col-lg-2 col-sm-12 pad"></div>
+            <div class="col-md-8 col-lg-8 col-sm-12">
+               <h2 style="text-align:center;">Choralhandschriften und Drucke der Zentralbibliothek der Wiener Franziskanerprovinz
+                  Graz</h2>
+            </div>
+            <div class="col-md-2 col-lg-2 col-sm-12 pad"></div>
          </div>
       </main>
       <footer class="footer">
