--- a/Pezzana.html
+++ b/Pezzana.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="Drucker">
+      <meta  name="apple-mobile-web-app-title" content="Giovanni Antonio Pezzana">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >Drucker</title>
+      <title >Giovanni Antonio Pezzana</title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -63,36 +63,20 @@
       </div>
       <main class="flex-grow-1">
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Drucker</h1>
-            <div class="card-body drucker">
-               <ul>
-                  <li><a href="Voigt.html">Leopold Voigt</a>, aktiv in <a href="Wien.html" target="_blank">Wien</a></li>
-                  <li><a href="Mayr.html">Johann Baptist Mayr</a>, aktiv in <a href="Salzburg.html" target="_blank">Salzburg</a></li>
-                  <li><a href="Pezzana.html">Giovanni Antonio Pezzana</a>, aktiv in <a href="Venedig.html" target="_blank">Venedig</a></li>
-                  <li><a href="Balleoni.html">Paolo Baglioni</a>, aktiv in <a href="Venedig.html" target="_blank">Venedig</a></li>
-                  <li><a href="Ciera.html">Pietro Ciera</a>, aktiv in <a href="Venedig.html" target="_blank">Venedig</a></li>
-               </ul>
+            <h1 class="text-center pb-4 pt-3">Giovanni Antonio Pezzana</h1>
+            <div class="card-body"><small>Geburtsdatum: </small>1717<br/><small>Todesdatum: </small>1779<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Venedig.html" target="_blank">Venedig</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1102696757" target="_blank">1102696757</a><br/><small>Wikidata ID: </small><a href="https://www.wikidata.org/entity/Q105889193" target="_blank">Q105889193</a><br/><hr>
+               <div id="mentions" align="left">
+                  <legend>Verantwortlich für:</legend>
+                  <ul>
+                     <li><a href="S1_69.html">Antiphonarium de Sanctis Trium Ordinum Sancti Patris
+                           Francisci</a></li>
+                     <li><a href="S1_64.html">Psalterium Romanum dispositum per Hebdomadam</a></li>
+                  </ul>
+               </div>
             </div>
          </div>
       </main>
-      <link href="https://unpkg.com/tabulator-tables@5.6.0/dist/css/tabulator.min.css" rel="stylesheet">
-      <link href="https://unpkg.com/tabulator-tables@5.6.0/dist/css/tabulator_bootstrap5.min.css" rel="stylesheet"><script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.6.0/dist/js/tabulator.min.js"></script><script src="tabulator-js/config.js"></script><script>
-            var table = new Tabulator("#myTable", config);
-            //trigger download of data.csv file
-            document.getElementById("download-csv").addEventListener("click", function(){
-            table.download("csv", "data.csv");
-            });
-            
-            //trigger download of data.json file
-            document.getElementById("download-json").addEventListener("click", function(){
-            table.download("json", "data.json");
-            });
-            
-            //trigger download of data.html file
-            document.getElementById("download-html").addEventListener("click", function(){
-            table.download("html", "data.html", {style:true});
-            });
-        </script><footer  class="footer">
+      <footer  class="footer">
          <div class="container-fluid" id="footer-full-content" tabindex="-1 overflow-hidden">
             <div class="row justify-content-center overflow-hidden">
                <div class="footer-widget col-lg-1 col-md-2 col-sm-2 col-xs-6 text-right overflow-hidden">
