--- a/A67_18.html
+++ b/A67_18.html
@@ -73,7 +73,7 @@
                      <h3 align="center"><a href="A67_18.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
                   </div>
                   <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right">
-                     <h1><a href="S1_27.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
+                     <h1><a href="Graduale aus Taisten bei Welsberg (Pustertal) - I-BREmd ohne Signatur_duplicated.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
                   </div>
                </div>
                <div id="container-resize" class="row transcript active">
