--- a/A67_20.html
+++ b/A67_20.html
@@ -66,7 +66,7 @@
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
-                     <h1><a href="S1_45.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
+                     <h1><a href="Graduale f%C3%BCr den Gebrauch in der Erzdi%C3%B6zese Salzburg - A-Wda Cod. 3_duplicated.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
                      <h1 align="center">A 67/20 (Asperges me Domine)</h1>
