--- a/A67_27.html
+++ b/A67_27.html
@@ -66,7 +66,7 @@
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
-                     <h1><a href="S1_72.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
+                     <h1><a href="Graduale f%C3%BCr den Gebrauch in der Di%C3%B6zese Brixen - I-SCAss VII a 7_duplicated.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
                      <h1 align="center">A 67/27 (Pro divino officio in choro)</h1>
