--- a/S1_22.html
+++ b/S1_22.html
@@ -73,7 +73,7 @@
                      <h3 align="center"><a href="S1_22.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
                   </div>
                   <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right">
-                     <h1><a href="A64_41.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
+                     <h1><a href="Graduale aus dem Stift Seckau - A-Gu 17_duplicated.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
                   </div>
                </div>
                <div id="container-resize" class="row transcript active">
