--- a/S1_74.html
+++ b/S1_74.html
@@ -66,7 +66,7 @@
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
-                     <h1><a href="S1_70.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
+                     <h1><a href="Graduale Michaelbeuern (OSB) - A-MB Man.Perg. 2_duplicated.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
                      <h1 align="center">S 1/74 (Ordo agendorum et cantandorum in actibus processionalibus)</h1>
