--- a/S1_19.html
+++ b/S1_19.html
@@ -73,7 +73,7 @@
                      <h3 align="center"><a href="S1_19.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
                   </div>
                   <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right">
-                     <h1><a href="Antiphonar-Winterteil f%C3%BCr den Gebrauch der Augustinerchorherren von Klosterneuburg - A-KN 65_duplicated.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
+                     <h1><a href="S1_44.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
                   </div>
                </div>
                <div id="container-resize" class="row transcript active">
