--- a/S1_24.html
+++ b/S1_24.html
@@ -66,14 +66,14 @@
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
-                     <h1><a href="TRAINING_VALIDATION_SET_Chorbuch-6.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
+                     <h1><a href="A70_41.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
                      <h1 align="center">S 1/24 (Pro missiones)</h1>
                      <h3 align="center"><a href="S1_24.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
                   </div>
                   <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right">
-                     <h1><a href="Gradual-Termporale aus Kreuzlingen (OSA) - A-BRlm P34_duplicated.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
+                     <h1><a href="A67_43.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
                   </div>
                </div>
                <div id="container-resize" class="row transcript active">
