--- a/S1_39.html
+++ b/S1_39.html
@@ -66,7 +66,7 @@
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
-                     <h1><a href="TRAINING_VALIDATION_SET_Drucke-1.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
+                     <h1><a href="A64_37.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
                      <h1 align="center">S 1/39 (Et licet sint alia multa in quibus debeamus")</h1>
