--- a/S1_45.html
+++ b/S1_45.html
@@ -66,7 +66,7 @@
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
-                     <h1><a href="OFM_Grad_Italy_A-Wn15484_duplicated.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
+                     <h1><a href="S1_69.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
                      <h1 align="center">S 1/45 (Crucis vox hunc adloquitur)</h1>
